<resources>
    <string name="label_app_name">Authenticator</string>
    <string name="introduction_backup_title">Backup</string>
    <string name="introduction_backup_description">You can transfer your data to another device or Authenticator app</string>
    <string name="introduction_export_text_title">Exported accounts</string>
    <string name="introduction_export_text_description">Copy, Save or Print your backup and store it in a secure location</string>
    <string name="label_done">Done</string>
    <string name="label_drag_handle">Drag handle</string>
    <string name="label_account_icon">Account icon</string>
    <string name="label_generate_next_pin">Generate next PIN</string>
    <string name="label_edit">Edit</string>
    <string name="label_delete">Delete</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_go_back">Go back</string>
    <string name="label_error">Error</string>
    <string name="label_replace">Replace</string>
    <string name="label_account_already_exists_title">Account already exists</string>
    <string name="label_account_already_exists_description">An account with the same name already exists, do you want to replace it?\n\nIf the previous account is still in use make sure to disable the 2 Factors Authentication on that account\'s website before overwriting this account</string>
    <string name="label_ok">Ok</string>
    <string name="label_show_advanced">Show advanced</string>
    <string name="label_hide_advanced">Hide advanced</string>
    <string name="label_add_account">Add account</string>
    <string name="label_next">Next</string>
    <string name="label_import_option_qr">QR Code</string>
    <string name="label_import_option_qr_description">Scan one or multiple QR codes</string>
    <!--    TODO: Rename all accessibility labels like this   -->
    <string name="accessibility_back_button">Back button</string>
    <string name="label_finish">Finish</string>
    <string name="accessibility_qr_code">QR Code</string>
    <string name="accessibility_remove_qr_code">Remove QR Code</string>
    <string name="label_import_option_file">File</string>
    <string name="label_import_option_file_description">Load a text or image file</string>
    <string name="label_import_option_text">Text</string>
    <string name="label_import_option_text_description">Input a single uri or text</string>
    <string name="error_empty_field">Field cannot be empty</string>
    <string name="label_uri_or_text">URI or text</string>
    <string name="label_keep_both">Keep both</string>
    <string name="empty_view_no_results">No accounts found</string>
    <string name="empty_view_no_accounts">Press the \'+\' to add an account</string>
    <string name="pref_collapse_pins">Collapse PINs</string>
    <string name="pref_collapse_pins_summary">If disabled you can still click the account to copy the PIN</string>
    <string name="pref_collapse_icons">Collapse Icons</string>
    <string name="pref_appearance">Appearance</string>
    <string name="pref_privacy">Privacy &amp; Security</string>
    <string name="pref_backup">Backup</string>
    <string name="pref_info">Info</string>
    <string name="pref_export">Export</string>
    <string name="pref_export_summary">Export your data</string>
    <string name="pref_import">Import</string>
    <string name="pref_import_summary">Import your data</string>
    <string name="pref_hide_pins">Hide PINs</string>
    <string name="pref_hide_pins_summary">Replace the PINs with a sequence of symbols\n\nYou can the PIN click to toggle visibility</string>
    <string name="pref_hide_pins_automatically">Hide PINs Automatically</string>
    <string name="pref_hide_pins_automatically_summary">Hide PINs again after the specified time</string>
    <string name="pref_hide_pins_delay">Hide PINs Delay</string>
    <string name="pref_hide_pins_on_change">Hide On Change</string>
    <string name="pref_hide_pins_on_change_summary">If the PINs are showing, hide them again when the code changes</string>
    <string name="pref_allow_screenshots">Allow Screenshots</string>
    <string name="pref_allow_screenshots_summary">Allow screenshots and screen recordings while inside the app</string>
    <string name="label_settings">Settings</string>
    <string name="pref_app_lock">App Lock</string>
    <string name="pref_app_lock_summary">Require authentication when opening the app\n\nNote: A lock method must be set in order to use this setting</string>
    <string name="pref_export_lock">Export Lock</string>
    <string name="pref_export_lock_summary">Require authentication when exporting your data</string>
    <string name="label_unset">Not set</string>
    <string name="label_seconds_abbreviation">s</string>
    <string name="label_dynamic_colors_requires_android_13">Dynamic Colors require Android 13 or higher</string>
    <string name="pref_dynamic_colors">Dynamic Colors</string>
    <string name="pref_dynamic_colors_summary">Use Android 13\'s dynamic colors based on your wallpaper</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_totp_indicator">Countdown Indicator</string>
    <string name="label_backup_manager">Automatic Backups</string>
    <string name="error_frequency_not_set">Frequency must be specified</string>
    <string name="error_path_not_set">Path must be specified</string>
    <string name="error_scheduling_backup_job">There was an error scheduling the job</string>
    <string name="label_enabled">Enabled</string>
    <string name="label_path">Path</string>
    <string name="label_frequency">Frequency</string>
    <string name="label_local">Local</string>
    <string name="label_google_drive">Google Drive</string>
    <string name="label_local_backup_complete">Local backup complete</string>
    <string name="label_local_backup_complete_body">Saved to %1$s</string>
    <string name="label_local_backup_failed">Local backup failed</string>
    <string name="label_local_backup_failed_body">Cannot create backup file at %1$s</string>
    <string name="label_version">Version</string>
    <string name="label_restore">Restore</string>
    <string name="label_no_last_backup">No recent backup found</string>
    <string name="label_last_backup">Last backup</string>
    <string name="error_backup_not_found">Backup file was moved or deleted</string>
    <string name="pref_pin_text_size">Pin Size</string>
    <string name="label_name">Name</string>
    <string name="label_add_tag">Add tag</string>
    <string name="error_tag_already_exists">Tag already exists</string>
    <string name="empty_view_no_tags">Press "+" to add a tag</string>
    <string name="label_tags">Tags</string>
    <string name="label_edit_tag">Edit tag</string>
    <string name="label_export_option_qr_description">
        Creates one or more QR codes. This will try and create as little QR codes as possible.&lt;br/>&lt;br/>
        &lt;b>Exported items&lt;/b>:
        &lt;ul>
            &lt;li> Accounts&lt;/li>
            &lt;li> Tags&lt;/li>
        &lt;/ul>
    </string>
    <string name="label_export_option_qr">QR</string>
    <string name="label_export_option_google_authenticator_description">
        Creates one or more QR codes that can be imported by Google Authenticator.&lt;br/>&lt;br/>
        &lt;b>Exported items&lt;/b>:
        &lt;ul>
            &lt;li> Accounts&lt;/li>
        &lt;/ul>
    </string>
    <string name="label_export_option_google_authenticator">Google Authenticator</string>
    <string name="label_export_option_text">Text File</string>
    <string name="label_export_option_text_description">
        Export all items in a single text file.&lt;br/>&lt;br/>
        &lt;b>Exported items&lt;/b>:
        &lt;ul>
            &lt;li> Accounts&lt;/li>
            &lt;li> Tags&lt;/li>
        &lt;/ul>
    </string>
    <string name="label_export_option_json">Json File</string>
    <string name="label_export_option_json_description">
        Export all items in a single json file.&lt;br/>&lt;br/>
        &lt;b>Exported items&lt;/b>:
        &lt;ul>
            &lt;li> Accounts&lt;/li>
            &lt;li> Tags&lt;/li>
            &lt;li> App Settings&lt;/li>
        &lt;/ul>
    </string>
    <string name="label_qr">QR</string>
    <string name="label_share_qr">Share QR</string>
    <string name="error_invalid_character">Invalid character</string>
    <string name="label_backup_now">Backup Now</string>
    <string name="label_on">On</string>
    <string name="label_off">Off</string>
    <string name="label_system">System</string>
    <string name="label_light">Light</string>
    <string name="label_dark">Dark</string>
    <string name="label_theme">Theme</string>
    <string name="label_true_black">True Black</string>
    <string name="label_theme_color">Theme Color</string>
    <string name="label_qr_code">QR Code</string>
    <string name="label_close">Close</string>
    <string name="label_copy_uri">Copy Uri</string>
    <string name="label_uri_copied">Uri copied to clipboard</string>
    <string name="error_local_backup_failed_no_permission">Cannot write to backup directory. Permission denied</string>
    <string name="label_time_sync_never">Adjust Authenticator\'s internal clock if your phone\'s date and time is incorrect.\n\nNote: This will only sync the Authenticator app, your phone\'s date/time will remain untouched.</string>
    <string name="label_time_sync_behind">Device is behind by %d minutes</string>
    <string name="label_time_sync_ahead">Device is ahead by %d minutes</string>
    <string name="label_totp_indicator_circular">Circular</string>
    <string name="label_totp_indicator_circular_solid">Circular (Solid)</string>
    <string name="label_totp_indicator_circular_text">Circular (Text)</string>
    <string name="label_totp_indicator_text">Text</string>
    <string name="label_totp_indicator_row">Row</string>
    <string name="label_totp_indicator_background">Background</string>
</resources>