<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_appearance">
        <ListPreference
            android:key="app_theme"
            android:title="@string/pref_theme"
            app:entries="@array/themes"
            android:defaultValue="followsystem"
            android:entryValues="@array/theme_values"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:key="dynamic_colors"
            android:title="@string/pref_dynamic_colors"
            android:summary="@string/pref_dynamic_colors_summary" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="show_pins"
            android:summary="@string/pref_show_pins_summary"
            android:title="@string/pref_show_pins" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="show_icons"
            android:title="@string/pref_show_icons" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_privacy">
        <SwitchPreference
            android:title="@string/pref_app_lock"
            android:summary="@string/pref_app_lock_summary"
            android:key="app_lock"/>

        <SwitchPreference
            android:title="@string/pref_export_lock"
            android:summary="@string/pref_export_lock_summary"
            android:key="export_lock"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="allow_screenshots"
            android:title="@string/pref_allow_screenshots"
            android:summary="@string/pref_allow_screenshots_summary"/>

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="show_pins"
            android:key="hide_pins"
            android:summary="@string/pref_hide_pins_summary"
            android:title="@string/pref_hide_pins" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="hide_pins"
            android:key="hide_pins_on_change"
            android:summary="@string/pref_hide_pins_on_change_summary"
            android:title="@string/pref_hide_pins_on_change" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="hide_pins"
            android:key="hide_pins_automatically"
            android:summary="@string/pref_hide_pins_automatically_summary"
            android:title="@string/pref_hide_pins_automatically" />

        <EditTextPreference
            android:defaultValue="30"
            android:dependency="hide_pins_automatically"
            android:dialogLayout="@layout/view_preference_edit_text_numeric"
            android:key="hide_pins_delay"
            android:title="@string/pref_hide_pins_delay" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_backup">
        <Preference
            android:key="backup_export"
            android:summary="@string/pref_export_summary"
            android:title="@string/pref_export" />
        <Preference
            android:key="backup_import"
            android:summary="@string/pref_import_summary"
            android:title="@string/pref_import" />
        <!--        <SwitchPreference android:title="Automatic backup" />-->
        <!--        <Preference android:title="Automatic Backup frequency" />-->
        <!--        <MultiSelectListPreference android:title="Automatic Backup locations" />-->
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_info">
        <!--        <Preference android:title="Open Source Licenses" />-->
        <!--        <Preference-->
        <!--            android:enabled="false"-->
        <!--            android:summary="0.1.0"-->
        <!--            android:title="Version" />-->
    </PreferenceCategory>
</PreferenceScreen>