<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <MultiSelectListPreference
        android:entryValues="@array/theme_values"
        android:key="testaaaabbbbaaaa"
        android:title="test"
        app:entries="@array/themes" />

    <dev.notrobots.preferences2.widgets.MaterialMultiSelectListPreference
        android:entryValues="@array/theme_values"
        android:key="testaaaabbbbaaaaddd"
        android:title="test"
        app:entries="@array/themes" />

    <Preference
        android:key="time_sync"
        android:persistent="false"
        android:summary="Never synced"
        android:title="Time sync" />

    <PreferenceCategory android:title="@string/pref_appearance">
        <dev.notrobots.preferences2.widgets.MaterialListPreference
            android:defaultValue="followsystem"
            android:entryValues="@array/theme_values"
            android:key="app_theme"
            android:title="@string/pref_theme"
            app:entries="@array/themes"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:key="_custom_app_theme"
            android:title="Customize Theme"
            app:isPreferenceVisible="false" />

        <dev.notrobots.preferences2.widgets.MaterialSwitchPreference
            android:key="dynamic_colors"
            android:summary="@string/pref_dynamic_colors_summary"
            android:title="@string/pref_dynamic_colors"/>

        <dev.notrobots.authenticator.widget.preference.CountdownIndicatorPreference
            android:defaultValue="circular"
            android:entries="@array/totp_indicators"
            android:entryValues="@array/totp_indicator_values"
            android:key="totp_indicator"
            android:title="@string/pref_totp_indicator"
            app:useSimpleSummaryProvider="true" />

        <dev.notrobots.preferences2.widgets.MaterialSwitchPreference
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:key="collapse_pins"
            android:summary="@string/pref_collapse_pins_summary"
            android:title="@string/pref_collapse_pins"/>

        <dev.notrobots.preferences2.widgets.MaterialListPreference
            android:defaultValue="medium"
            android:entryValues="@array/pin_text_size_values"
            android:key="pin_text_size"
            android:title="@string/pref_pin_text_size"
            app:entries="@array/pin_text_sizes"
            app:useSimpleSummaryProvider="true" />

        <dev.notrobots.preferences2.widgets.MaterialSwitchPreference
            android:defaultValue="false"
            android:key="collapse_icons"
            android:title="@string/pref_collapse_icons"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_privacy">
        <dev.notrobots.preferences2.widgets.MaterialSwitchPreference
            android:key="app_lock"
            android:summary="@string/pref_app_lock_summary"
            android:title="@string/pref_app_lock" />

        <dev.notrobots.preferences2.widgets.MaterialSwitchPreference
            android:key="export_lock"
            android:summary="@string/pref_export_lock_summary"
            android:title="@string/pref_export_lock" />

        <dev.notrobots.preferences2.widgets.MaterialSwitchPreference
            android:defaultValue="false"
            android:key="allow_screenshots"
            android:summary="@string/pref_allow_screenshots_summary"
            android:title="@string/pref_allow_screenshots" />

        <dev.notrobots.preferences2.widgets.MaterialSwitchPreference
            android:defaultValue="false"
            android:dependency="collapse_pins"
            android:key="hide_pins"
            android:summary="@string/pref_hide_pins_summary"
            android:title="@string/pref_hide_pins" />

        <dev.notrobots.preferences2.widgets.MaterialSwitchPreference
            android:defaultValue="false"
            android:dependency="hide_pins"
            android:key="hide_pins_on_change"
            android:summary="@string/pref_hide_pins_on_change_summary"
            android:title="@string/pref_hide_pins_on_change" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_backup">
        <Preference
            android:key="backup_export"
            android:summary="@string/pref_export_summary"
            android:title="@string/pref_export" />
        <Preference
            android:key="backup_import"
            android:summary="@string/pref_import_summary"
            android:title="@string/pref_import" />

        <Preference
            android:key="backup_manager"
            android:title="Automatic Backups" />

        <!--        <SwitchPreference android:title="Automatic backup" />-->
        <!--        <Preference android:title="Automatic Backup frequency" />-->
        <!--        <MultiSelectListPreference android:title="Automatic Backup locations" />-->
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_info">

        <!--        <Preference android:title="Open Source Licenses" />-->

        <Preference
            android:key="app_version"
            android:summary="0.0.0"
            android:title="@string/label_version" />
    </PreferenceCategory>
</PreferenceScreen>