<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
            android:background="?attr/colorSurface"
            app:expandedTitleGravity="center|bottom"
            app:title="@string/introduction_export_text_title">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                app:titleCentered="true" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/description"
            style="@style/IntroductionDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introduction_export_text_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/file_preview"
            style="@style/IntroductionOptions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollHorizontally="true"
            android:textIsSelectable="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintBottom_toTopOf="@id/list_output"  />

        <dev.notrobots.authenticator.widget.OptionList
            android:id="@+id/list_output"
            style="@style/IntroductionOptions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/file_preview"
            app:layout_constraintBottom_toTopOf="@id/done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <dev.notrobots.authenticator.widget.OptionListItem
                android:id="@+id/show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:option_description="Show the backup data"
                app:option_icon="@drawable/ic_eye"
                app:option_title="Show" />

            <dev.notrobots.authenticator.widget.OptionListItem
                android:id="@+id/copy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:option_description="Copy the backup data to the clipboard"
                app:option_icon="@drawable/ic_copy"
                app:option_title="Copy" />

            <dev.notrobots.authenticator.widget.OptionListItem
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:option_description="Save the backup data to the storage"
                app:option_icon="@drawable/ic_save"
                app:option_title="Save" />

        </dev.notrobots.authenticator.widget.OptionList>

        <Button
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/label_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


